[package]
name = "mln-did-cpi"
version = "0.0.1"
edition = "2021"
include = ["src/**/*", "README.md", "LICENSE", "idl.json"]
description = "CPI helpers for the Mln-DID program"
license-file = "LICENSE"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = { package = "solarti-anchor-lang", version = "0.26.1" }