[package]
name = "mln-did"
version = "3.2.0"
description = "Derived/adapted from sol-did of Martin Riedel"
edition = "2021"
readme = "../../README.md"
homepage = "https://www.solarti.top/"
repository = "https://github.com/miracle-land/mln-did"
license = "MIT"
keywords = ["did", "miraland", "identity", "did-method"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mln_did"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { package = "solarti-anchor-lang", version = "0.26.0" }
bitflags = "1.3.2"
borsh = "0.9.3"
itertools = "0.10.3"
num-derive = "0.3"
num-traits = "0.2"
miraland-program = "1.14.17-rc5"
solana-security-txt = "1.1.0"
